--- a/EAIProper/src/EAIProper/project.json
+++ b/EAIProper/src/EAIProper/project.json
@@ -1,13 +1,12 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.1",
-      "type": "platform"
-    },
+    "microsoft.aspnetcore.diagnostics": "1.1.2",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Routing": "1.0.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
+    "microsoft.aspnetcore.staticfiles": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
@@ -15,8 +14,11 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+    "Microsoft.NETCore.App": {
+      "version": "1.0.1",
+      "type": "platform"
+    },
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.0",
-    "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
     "System.Interactive.Async": "3.0.0",
     "System.Linq": "4.3.0",
     "System.Linq.Parallel": "4.3.0"
