Adding connectionString appSettings.json

--- a/EAIProper/src/EAIProper/appsettings.json
+++ b/EAIProper/src/EAIProper/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "PostgesConnection": {
+    "connectionString": "User ID=postgres;Password=postgres@2017;Host=10.152.10.65;Port=5432;Database=eaidev;Pooling=true"
   }
 }
